2005-11-25  Alexey Shchepin  <alexey@sevcom.net>

	* doc/Makefile: Now really added

2005-11-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: The "id" attribute of roster push packet was
	missed (thanks to Maxim Ryazanov)
	* src/mod_roster_odbc.erl: Likewise

	* src/web/ejabberd_web_admin.erl: Fixed encoding of user names in
	URLs

	* src/web/ejabberd_http.erl: Added url_encode function from yaws

	* src/ejabberd_c2s.erl: Send stream error when connection is
	replaced (thanks to Maxim Ryazanov)

2005-11-19  Mickael Remond  <mickael.remond@process-one.net>

	* contrib/extract_translations/prepare-translation.sh: Added
	wrapper to extract_translation.erl (thanks to Badlop)

2005-11-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard.erl: Fixed xmlns in disco items replies (thanks to
	Maxim Ryazanov)
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise

	* src/tls/Makefile.in: Use CPPFLAGS (thanks to Magnus Henoch)

2005-11-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Support for dNSName certificate field
	and DNS name matching
	* src/XmppAddr.asn1: Moved here from src/tls/XmppAddr.asn1
	* src/tls/XmppAddr.asn1: Likewise    
	* src/Makefile.in: Updated
	* src/tls/Makefile.in: Updated

2005-11-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/ejabberd_odbc.erl: Support for mnesia-like transaction
	interface
	* src/mod_roster_odbc.erl: Updated to use
	ejabberd_odbc:sql_transaction/2

2005-11-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Fixed invalid behaviour upon
	connecting to host with invalid domain
	* src/ejabberd_s2s.erl: Likewise

2005-11-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_config.erl: Support for per host certificates
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_s2s_in.erl: Fixed id-on-xmppAddr processing

2005-11-03  Alexey Shchepin  <alexey@sevcom.net>
