@@ -1,3 +1,9 @@
+2005-11-26  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_http.erl: Now web interface is compliant to
+	XHTML 1.0 Transitional (thanks to Sander Devrieze)
+	* src/web/ejabberd_web_admin.erl: Likewise
+
 2005-11-25  Alexey Shchepin  <alexey@sevcom.net>
 
 	* doc/Makefile: Now really added
